--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -10,19 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert": "^6.0.2",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.2",
     "mongoose-paginate-v2": "^1.8.5",
+    "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "sweet": "^0.1.1"
   },
   "type": "module"
 }
