--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.2",
@@ -26,7 +27,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
-    "sweet": "^0.1.1"
+    "sweet": "^0.1.1",
+    "sweetalert2": "^11.14.5"
   },
   "type": "module"
 }
