fix users and events

--- a/proyecto/.env
+++ b/proyecto/.env
@@ -1,3 +1,15 @@
-JWT_SECRET=
-JWT_EXPIRATION=
-JWT_COOKIE_EXPIRES=
+# MongoDB connection URI
+MONGODB_URI=mongodb+srv://Omatsuri:Coder123@cluster0.d4t0t.mongodb.net/
+
+# Secret keys for JWT and session
+JWT_SECRET=tu_secreto_super_seguro
+SESSION_SECRET=test124
+
+# Cookie secret for cookie-parser
+COOKIE_SECRET=cookie123
+
+# Server port
+PORT=8080
+
+# Node environment
+NODE_ENV=development
