--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -2,9 +2,9 @@
   "name": "proyecto",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +13,16 @@
     "alert": "^6.0.2",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "compression": "^1.7.4",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
     "handlebars": "^4.7.8",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.2",
     "mongoose-paginate-v2": "^1.8.5",
@@ -28,7 +32,12 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
     "sweet": "^0.1.1",
-    "sweetalert2": "^11.14.5"
+    "sweetalert2": "^11.6.13"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "chai": "^5.1.2",
+    "mocha": "^10.8.2",
+    "supertest": "^7.0.0"
+  }
 }
