--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -33,6 +33,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "sweet": "^0.1.1",
     "sweetalert2": "^11.6.13",
     "winston": "^3.17.0"
@@ -40,6 +42,7 @@
   "type": "module",
   "devDependencies": {
     "chai": "^5.1.2",
+    "jest": "^29.7.0",
     "mocha": "^10.8.2",
     "sinon": "^19.0.2",
     "supertest": "^7.0.0"
